Closed Bug 921293 Opened 12 years ago Closed 12 years ago

Don't print NS_WARNINGs if an environment variable is set

Categories

(Core :: XPCOM, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: billm, Assigned: billm)

References

Details

Attachments

(1 file)

Attached patch silence-warningsSplinter Review
It's useful to be able to see JS errors on stdout when running debug builds. However, there's a lot of debug spew that gets in the way. Some of it can be disabled with MOZ_QUIET. However, there are still a lot of lines printed from NS_WARNINGs. Ideally we would fix these, but the same ones have been printing for quite a while and on every browser startup, so that seems unlikely. This patch adds another environment variable, MOZ_IGNORE_WARNINGS, that allows you to silence these messages. Possibly we should use MOZ_QUIET for this purpose as well?
Attachment #810877 - Flags: review?(benjamin)
Attachment #810877 - Flags: review?(benjamin) → review+
Blocks: fx-noise
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: