Bug 921293 - Don't print NS_WARNINGs if an environment variable is set (r=bsmedberg)